...
                android:layout_weight="0.5"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/docs"
                android:textColor="#FF0000FF"
                android:focusable="true"
                android:nextFocusForward="@+id/btn_run"
                android:nextFocusRight="@+id/btn_run"
                android:nextFocusDown="@+id/txt_request_url" />

            <Button
                android:id="@+id/btn_run"
                android:layout_width="0dp"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/status"
                android:textStyle="bold"
                android:labelFor="@+id/txt_status_color" />

            <!-- The status color -->
            <ImageView
                android:id="@+id/txt_status_color"
                android:layout_width="10dp"
                android:layout_height="10dp"
...
