<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/snippet_list"
    android:name="com.microsoft.graph.snippets.SnippetListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    tools:context=".SnippetListActivity"
    tools:layout="@android:layout/list_content" />
