...
    <string name="txt_snippet_name_text">Get all pages</string>
    <string name="list_segment_snippet_name">PAGES</string>
    <string name="sign_in_button">Connect to Microsoft Graph</string>
    <string name="sign_in_description">Welcome to the Microsoft Graph SDK Snippets sample for Android. Let\'s sign in and get started…</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="stoplight_in_progress">In progress</string>
    <string name="stoplight_success">Success</string>
    <string name="stoplight_failure">Failure</string>
    <string name="disconnect_menu_item">Disconnect</string>
</resources>

